# PortfolioWebsite

./: .checkov.yml  .gitignore  .projenrc.py  .pylintrc  Dockerfile  Makefile  README.md  app.py  cdk.json  package-lock.json  package.json  requirements-dev.txt  requirements.txt  set_env.sh
.github/workflows/: README.md  deploy.yaml  deploy_dev.yaml  deploy_env.yaml  deploy_prod.yaml  diff.yaml  diff_dev.yaml  diff_env.yaml  diff_prod.yaml  lint-checkov.yml  preview_cleanup.yaml  preview_cleanup_trigger.yaml  preview_deploy.yaml  preview_deploy_trigger.yaml
.projen/: deps.json
cdk/: .cfnlintrc.yml  app.py  cdk.context.json  cdk.json  config.py  environments.json  pyproject.toml  requirements-dev.txt  requirements.txt
cdk/assets/lambdas/ssm_param_replicator/: Dockerfile  ssm_param_replicator.py
cdk/my_constructs/: README.md  acm_certificate.py  cloudfront_distribution.py  hosted_zone.py  s3_bucket.py  ssm_param_replicator.py  ssm_replication.py
cdk/stacks/: README.md  acm_certificates_stack.py  backup_website_bucket.py  website_stack.py
cdk/tests/: conftest.py  helpers.py  snapshot_tests.py  test_acm_stack.py  test_backup_bucket_stack.py  test_contact_form_intake.py  test_snapshot.py  test_website_stack.py
cdk/tests/snapshots/test_snapshot/test_templates_snapshot/: acm_certificate_snapshot  backup_bucket_snapshot  website_snapshot
frontend/: index.html  package-lock.json  package.json
site_stacks/: website.py  website_files.py  website_stack.py
src/: .checkov.yml  Makefile  app.py  cdk.context.json  cdk.json  requirements.txt
tests/: test_example.py
(+51 files in other folders)
