[project]
name = "portfolio-website-cdk"
version = "1.0.0"
description = "AWS CDK infrastructure for the PortfolioWebsite project"
requires-python = ">=3.13"
dependencies = [
    "aws-cdk-lib==2.257.0",
    "constructs>=10.0.0,<11.0.0",
    "six==1.17.0",
    "typing-extensions==4.14.1",
]

[dependency-groups]
dev = [
    "bandit==1.9.4",
    "cfn-lint==1.51.0",
    "checkov",
    "py==1.11.0",
    "pygments==2.19.2",
    "pytest==9.0.3",
    "pytest-snapshot==0.9.0",
]

[tool.uv]
package = false
