[project]
name = "portfolio-website-cdk"
version = "1.0.0"
description = "AWS CDK infrastructure for the PortfolioWebsite project"
requires-python = ">=3.14"
dependencies = [
    "aws-cdk-lib==2.257.0",
    "constructs>=10.0.0,<11.0.0",
]

[dependency-groups]
dev = [
    "bandit==1.9.4",
    "cfn-lint==1.51.0",
    "checkov",
    "pytest==9.0.3",
    "pytest-snapshot==0.9.0",
]

[tool.uv]
package = false
